--- a/Job Portal System/Pages/Shared/_EditorScriptPartial.cshtml
+++ b/Job Portal System/Pages/Shared/_EditorScriptPartial.cshtml
@@ -1,1 +1,1 @@
-﻿<script src ="https://cloud.tinymce.com/5/tinymce.min.js?apiKey=qagffr3pkuv17a8on1afax661irst1hbr4e6tbv888sz91jc"></script>
+﻿<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
