--- a/Job Portal System/Areas/Announcements/Pages/Create.cshtml
+++ b/Job Portal System/Areas/Announcements/Pages/Create.cshtml
@@ -23,16 +23,29 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Announcement.Content"></label>
-                        <textarea asp-for="Announcement.Content" class="form-control" id="content"></textarea>
+                        <textarea asp-for="Announcement.Content" class="form-control" id="editor"></textarea>
                         <span asp-validation-for="Announcement.Content" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Image"></label>
-                        <input asp-for="Image" accept="image/*" class="form-control" />
-                        <span asp-validation-for="Image" class="text-danger"></span>
+                        <label asp-for="Announcement.Image"></label>
+                        <div>
+                            <label for="file-input" class="position-relative upload-image">
+                                <div id="shader" class="shader hidden"></div>
+                                <div id="loader" class="center hidden">
+                                    <div class="loader"></div>
+                                </div>
+                                <img id="image-viewer" src="https://i.imgur.com/MHie2Pn.png"
+                                     alt="" class="img-thumbnail">
+                            </label>
+                        </div>
+
+                        <input id="file-input" accept="image/*" class="d-none" type="file">
+                        <span asp-validation-for="Announcement.Image" id="error-message" class="text-danger"></span>
                     </div>
+                    <input asp-for="Announcement.Image" id="url-input" />
+                    <hr />
                     <div class="d-flex">
-                        <button class="btn btn-submit ml-auto cancel">
+                        <button class="btn btn-submit ml-auto">
                             Create
                         </button>
                     </div>
@@ -43,9 +56,8 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-area="Announcements" asp-page="Index">Back to List</a>
 </div>
-
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
