--- a/Job Portal System/Areas/Announcements/Pages/_AnnouncementsScriptsPartial.cshtml
+++ b/Job Portal System/Areas/Announcements/Pages/_AnnouncementsScriptsPartial.cshtml
@@ -1,2 +1,3 @@
 ﻿<script src="~/lib/jqueryui/jquery-ui.min.js"></script>
+<script src="~/js/upload-image.js"></script>
 <script src="~/js/announcements.js"></script>
