--- a/Job Portal System/Pages/Shared/_Layout.cshtml
+++ b/Job Portal System/Pages/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
     </environment>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
